test_suite/test_programs/errors/02_undefined_variable.csd
// NEGATIVE TEST: This program should FAIL to compile/interpret
// Expected behavior: Both interpreter and compiler should reject undefined variables
// with UndefinedVariable error at compile time, NOT during runtime

vibe main

yeet "vibez"

slay main_character() {
    vibez.spill("=== Undefined Variable Test ===")
    
    // This line should cause a compile-time error: UndefinedVariable
    vibez.spill(undefined_var)
    
    // This line should never execute
    vibez.spill("This should not execute")
}
